--- a/forms/Console.ui
+++ b/forms/Console.ui
@@ -250,7 +250,7 @@
        <bool>true</bool>
       </property>
       <property name="textInteractionFlags">
-       <set>Qt::TextBrowserInteraction</set>
+       <set>Qt::TextSelectableByMouse</set>
       </property>
      </widget>
     </item>
